2019-1/230/users/4030/executions/1576_1332.log
== TEST (2019-03-11 21:24:08) 
-- CODE:
aresta =5
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 21:28:38) 
-- CODE:
aresta =5
area = print(3/2*(x)**0.5*5**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = print(3/2*(x)**0.5*5**2)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 21:29:25) 
-- CODE:
aresta =5
area = print(3/2*(3)**0.5*5**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 21:31:26) 
-- CODE:
aresta =5
area = print(3/2*(3)**0.5*5**2)
 
print(round(3/2*(3)**0.5*5**2, 4))
-- OUTPUT:
64.9519052838329
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 21:31:37) 
-- CODE:
aresta =5
area = print(3/2*(3)**0.5*5**2)
 
print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.186567
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519052838329
64.9519
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 21:32:13) 
-- CODE:
aresta =5
area = print(3/2*(3)**0.5*5**2)
 
print(round(3/2*(3)**0.5*5**2,4))
-- OUTPUT:
64.9519052838329
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 21:32:24) 
-- CODE:
aresta =5
area = print(3/2*(3)**0.5*5**2)
 
print(round(3/2*(3)**0.5*5**2,4))
-- EXECUTION TIME:
0.143437
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519052838329
64.9519
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 21:33:19) 
-- CODE:
aresta =print(5)
area = print(3/2*(3)**0.5*5**2)
 
print(round(3/2*(3)**0.5*5**2,4))
-- OUTPUT:
5
64.9519052838329
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 21:33:25) 
-- CODE:
aresta =print(5)
area = print(3/2*(3)**0.5*5**2)
 
print(round(3/2*(3)**0.5*5**2,4))
-- EXECUTION TIME:
0.244634
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5
64.9519052838329
64.9519
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 21:36:15) 
-- CODE:
aresta =print(5)
area = print(3/2*(3)**0.5*5**2)
 
print(round(3/2*(3)**0.5*5**2, 4))
-- OUTPUT:
5
64.9519052838329
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 21:36:50) 
-- CODE:
aresta =print(5)
area = print(3/2*(3)**0.5*5**2)
 
print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.13014
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5
64.9519052838329
64.9519
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 21:39:19) 
-- CODE:
aresta =print(5)
area = print(3/2*(3)**0.5*5 ** 2)
 
print(round(3/2*(3)**0.5*5 ** 2, 4))
-- EXECUTION TIME:
0.125947
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5
64.9519052838329
64.9519
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 21:39:34) 
-- CODE:
aresta =print(5)
area = print(3/2*(3)**0.5*5 ** 2)
 
print(round(3/2*(3)**0.5*5 ** 2, 4))
-- OUTPUT:
5
64.9519052838329
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 21:39:37) 
-- CODE:
aresta =print(5)
area = print(3/2*(3)**0.5*5 ** 2)
 
print(round(3/2*(3)**0.5*5 ** 2, 4))
-- OUTPUT:
5
64.9519052838329
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 21:39:40) 
-- CODE:
aresta =print(5)
area = print(3/2*(3)**0.5*5 ** 2)
 
print(round(3/2*(3)**0.5*5 ** 2, 4))
-- EXECUTION TIME:
0.210942
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5
64.9519052838329
64.9519
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 21:42:10) 
-- CODE:
aresta =print(5)
area = print(3/2*(3)**0.5*5 ** 2)
 
print(round(3/2*(3)**0.5*5 ** 2, 4))
-- OUTPUT:
5
64.9519052838329
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 21:49:19) 
-- CODE:
aresta =print(5)
area = print(3/2*(3)**0.5*5 ** 2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 21:51:17) 
-- CODE:
aresta =print(5)
area = print(3/2*(3)**0.5*5 ** 2)
 
print(round(3%2*(3)**0.5*5 ** 2, 4))
-- OUTPUT:
5
64.9519052838329
43.3013
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 21:51:41) 
-- CODE:
aresta =print(5)
area = print(3%2*(3)**0.5*5 ** 2)
 
print(round(3%2*(3)**0.5*5 ** 2, 4))
-- OUTPUT:
5
43.30127018922193
43.3013
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 21:51:49) 
-- CODE:
aresta =print(5)
area = print(3%2*(3)**0.5*5 ** 2)
 
print(round(3%2*(3)**0.5*5 ** 2, 4))
-- EXECUTION TIME:
0.131623
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5
43.30127018922193
43.3013
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 21:52:28) 
-- CODE:
aresta =print(5)
area = print(3/2*(3)**0.5*5 ** 2)
 
print(round(3/2*(3)**0.5*5 ** 2, 4))
-- OUTPUT:
5
64.9519052838329
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 21:53:43) 
-- CODE:
aresta =5
area = print(3/2*(3)**0.5*5 ** 2)
 
print(round(3/2*(3)**0.5*5 ** 2, 4))
-- OUTPUT:
64.9519052838329
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 21:53:55) 
-- CODE:
aresta =5
area = print(3/2*(3)**0.5*5 ** 2)
 
print(round(3/2*(3)**0.5*5 ** 2, 4))
-- EXECUTION TIME:
0.138235
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519052838329
64.9519
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 21:54:30) 
-- CODE:
aresta =5
area = 3/2*(3)**0.5*5 ** 2
 
print(round(3/2*(3)**0.5*5 ** 2, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 21:54:39) 
-- CODE:
aresta =5
area = 3/2*(3)**0.5*5 ** 2
 
print(round(3/2*(3)**0.5*5 ** 2, 4))
-- EXECUTION TIME:
0.142594
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
